compiler/tests/en/errors/str_concat_bad.salam
// EXPECT: E021
func main:
    mut a := [1, 2]
    x := "n=" + a
end
